v.11 🔷Changes log 👇🏼 🔹Implementación de el histórico de registro de cambios 🔹Reparación de links caídos o referencias inexistentes 🔹Mejora del diseño en elementos de el apartado "Web version" 🔹Implementación de fechas en el apartado "Web version" 🔹Diseño responsivo en el apartado "Web version" 🔹Eliminación de elementos de relleno en "Proyectos" y en "Exp & Skills" y adición de nuevo contenido 🔹Correcciones ortográficas" 🔹Utilización de local Storage y de session Storage dentro de Masterdots🔵 🔶Próximos cambios...🔜

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego</title>
+    <title>Aboutme</title>
+    <!-- Links -->
+    <link rel="stylesheet" href="./aboutme.html">
 </head>
 <body>
-    <H1>JUEGO MASTERDOTS</H1>
-    <script src="./js/userData.js"></script>
-    <script src="./js/juego.js"></script>
+    
 </body>
 </html>
