--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Fernando Leon Blog</title>
-        <!-- Linkeos de importaciones -->
+        <!-- Links de importaciones -->
         <link rel="icon" type="image/x-icon" href="/img/Fer-gusanito.png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,13 +15,13 @@
         
     </head>
     <body>
-        <!-- Menu de navegacion -->
+        <!-- Menu de navegación -->
         <nav>
             <ul>
                 <li><a href="#aboutme">Sobre mi</a></li>
                 <li><a href="#proyects">Proyectos</a></li>
                 <li id="logo"><a href="./index.html">👾</a></li>
-                <li><a href="#exp">Skils</a></li>
+                <li><a href="#exp">Skills</a></li>
                 <li><a href="#contactar">Contactar</a></li>
             </ul>
         </nav>
@@ -53,7 +53,7 @@
                     </li>
                 </ul>
             </section>
-            <!-- Bloque de aboutme -->
+            <!-- Bloque de about me -->
             <section id="aboutme">
                 <div id="title_aboutme">
                     <a href="./aboutme.html"><h2>Sobre mi</h2></a>
@@ -62,7 +62,7 @@
                     <img src="./img/Fer-gusanito.png" alt="Foto de alguien sonriendo">
                 </div>
                 <div id="text_aboutme">
-                    <p>Soy <strong> Fernando Leon Franco</strong> un chico apasionaodo por el aprendizaje <span> por la tecología y la programación </span></p>
+                    <p>Soy <strong> Fernando Leon Franco</strong> un chico apasionado por el aprendizaje por la tecnología y la programación.</p>
                     <p> Me defino como una persona con hambre de mucho aprendizaje, 
                     me gusta compartir mucho mi conocimiento y crecer en habilidades blandas junto con los que me rodean y de una manera u otra busco llegar a la vida que quiero, lo voy a hacer de una u otra manera, sin embargo me gusta respetar los limites de los demas asi que no voy a pisar la libertad de otros para alcanzar la mia.</p>    
                 </div>
@@ -78,12 +78,12 @@
                 <div id="proyect_container" class="proyect_container">
                     <div class="proyect">
                         <img src="./img/giphy (1).gif" alt="">
-                        <h3>Protecto <strong>N</strong></h3>
+                        <h3>Proyecto <strong>N</strong></h3>
                         <h4>Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</h4>
                         <div class="sep"></div>
-                        <p>Este proyecto me dará la oportunidad de crear muchas de las funcions de backend que ocupo y requiero.</p>
+                        <p>Este proyecto me dará la oportunidad de crear muchas de las funciones de backend que ocupo y requiero.</p>
                         <p class="time">Última actualización 21/11/2022</p>
-                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n.html';">👉🏻</button></div>
+                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n/proyect_n.html';">👉🏻</button></div>
                     </div>
                     <div class="proyect">
                         <img src="./img/711093.jpg" alt="Portfolio 3">
@@ -91,25 +91,8 @@
                         <h4>FrontEnd</h4>
                         <div class="sep"></div>
                         <p>Estaremos viendo con el profe paco el frontend</p>
-                        <p class="time">Última actualización 24/11/2022</p>
+                        <p class="time">Última actualización 01/12/2022</p>
                         <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/Masterdots/masterdots_index.html';">👉🏻</button></div>
-                    </div>
-                    <div class="proyect">
-                        
-                        <iframe width="250" src="https://www.youtube.com/embed/p8P6HR7tucE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <h3>musica</h3>
-                        <h4>concierto benicassim</h4>
-                        <div class="sep"></div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <div class="masinfo"><button type="button">MAS INFO</button></div>
-                    </div>
-                    <div class="proyect">
-                        <img src="./img/812556.jpg" alt="Portfolio 4">
-                        <h3>musica</h3>
-                        <h4>concierto benicassim</h4>
-                        <div class="sep"></div>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-                        <div class="masinfo"><button type="button">MAS INFO</button></div>
                     </div>
                 </div>
             </section>
@@ -117,72 +100,36 @@
         <!-- Bloque exp-->
         <section id="exp">
             <h2>Exp & Skills</h2>
-            <h3>"Creo que mis años de exp importan, pero lo que importa es lo que he hecho con esa información"</h3>
-            <p>Realmente le he dado vueltas a las cosas en mi vida, he buscado ver si mi conocimiento me ha servido para algo, sin embargo, y para mi sorpresa si, como dice un buen amigo <cite>"Somos la iteracion del conocimiento acumulado de la historia de loa humanidad" -Joaquin Infante-</cite> y realmente tiene razón, asi que es muy facil en comparación a años atras el estudiar y poner en practica bastantes conocimientos y mas si estos los vemos como parte de algo mas grande de lo que son de una manera individual.</p>
+            <h3>"Creo que mis años de exp importan, pero lo que importa es lo que he hecho con esa información" -Daniel J.-</h3>
+            <p>Realmente le he dado vueltas a las cosas en mi vida, he buscado ver si mi conocimiento me ha servido para algo, sin embargo, y para mi sorpresa si, como dice un buen amigo <cite>"Somos la iteración del conocimiento acumulado de la historia de la humanidad" -Joaquin Infante- </cite> y realmente tiene razón, así que es muy fácil en comparación a años atrás el estudiar y poner en práctica bastantes conocimientos y más si estos los vemos como parte de algo más grande de lo que son de una manera individual.</p>
             <div class="gridexp">
                 <div class="cardexp">
-                    <h2>Diseño Web</h2>
-                    <h3 class="lefttext">2018-2022</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                    <h2>Curiosidad</h2>
+                    <h3 class="lefttext">Siempre juguemos a ser niños aún cuando nuestra edad sume algunas décadas.</h3>
+                    <p>No pienso que la curiosidad se limite a los gatos jaja, me considero que soy la típica persona que de la que dicen “Echando a perder se aprende”. Me encanta clavarme en conocimientos que me reten y le sumen al árbol de habilidades que voy construyendo a través del tiempo.</p>                        <p>“Lo que no te reta no te cambia”</p>
                     <ul>
-                        <li><img src="./img/tecno_au.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_cu.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_html.png" alt="" height="30px"></li>
+                        <li><img src="./img/creatividad.png" alt=""></li>
                     </ul>
                 </div>
                 <div class="cardexp">
-                    <h2>Diseño Web</h2>
-                    <h3 class="lefttext">2018-2022</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                    <h2>No me vas a parar...</h2>
+                    <h3 class="lefttext">Soy un loco, muy egocéntrico y acaparador...</h3>
+                    <p>Perdón por ser tan directo pero... o te lo digo yo o te das cuenta unos meses después y te vas de mi vida igualmente. Si no, mínimo ya sabes que te espera.</p>
                     <ul>
-                        <li><img src="./img/tecno_au.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_cu.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_html.png" alt="" height="30px"></li>
+                        <li><img src="./img/lanzadera.png" alt=""></li>
                     </ul>
                 </div>
                 <div class="cardexp">
-                    <h2>Diseño Web</h2>
-                    <h3 class="lefttext">2018-2022</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
+                    <h2>¿Y esto cómo se puede mejorar?</h2>
+                    <h3 class="lefttext">Continuamente me digo que todo es mejorable... ¡Hasta mi persona jaja!</h3>
+                    <p>No creo que se haya alcanzado la versión final de algo, difícilmente creo que somos nuestra versión final. Esto si es que se llega a saber sería hasta nuestros últimos días de aliento.</p>
                     <ul>
-                        <li><img src="./img/tecno_au.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_cu.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_html.png" alt="" height="30px"></li>
-                    </ul>
-                </div>
-                <div class="cardexp">
-                    <h2>Diseño Web</h2>
-                    <h3 class="lefttext">2018-2022</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
-                    <ul>
-                        <li><img src="./img/tecno_au.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_cu.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_html.png" alt="" height="30px"></li>
-                    </ul>
-                </div>
-                <div class="cardexp">
-                    <h2>Diseño Web</h2>
-                    <h3 class="lefttext">2018-2022</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
-                    <ul>
-                        <li><img src="./img/tecno_au.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_cu.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_html.png" alt="" height="30px"></li>
-                    </ul>
-                </div>
-                <div class="cardexp">
-                    <h2>Diseño Web</h2>
-                    <h3 class="lefttext">2018-2022</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nihil consectetur enim ea ducimus ipsum incidunt a doloremque et cum distinctio autem pariatur sed quae recusandae, alias expedita rerum, earum molestiae.</p>
-                    <ul>
-                        <li><img src="./img/tecno_au.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_cu.png" alt="" height="30px"></li>
-                        <li><img src="./img/tecno_html.png" alt="" height="30px"></li>
+                        <li><img src="./img/actualizacion-del-sistema.png" alt=""></li>
                     </ul>
                 </div>
             </div>
         </section>
-        <!-- Seccion contactar -->
+        <!-- Section contactar -->
         <section id="contact">
             <h2>CONTACTO</h2>
             <div class="form">
@@ -211,13 +158,36 @@
         </section>
         <!-- Footer -->
         <footer>
-            <ul>
-                <li>Web version V .1️⃣0️⃣</li>
-                <li>Changes log 👇🏼</li>
-                <li>🔹Display de error en un dato del formulario <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
-                <li>🔹Correcion de error en el id de correo que probocaba un valor null </li>
-                <li>🔹Proximos cambios...🔜 (apis)</li>
-            </ul>
+            <div id="logChanges">
+                <div class="cardChanges">
+                    <ul>
+                        <li>Web version V .1️⃣1️⃣ | 01/12/2022</li>
+                        <br>
+                        <li>🔷Changes log 👇🏼</li>
+                        <li class="changes">🔹Implementación de el histórico de registro de cambios</li>
+                        <li class="changes">🔹Reparación de links caídos o referencias inexistentes</li>
+                        <li class="changes">🔹Mejora del diseño en elementos de el apartado "Web version"</li>
+                        <li class="changes">🔹Implementación de fechas en el apartado "Web version"</li>
+                        <li class="changes">🔹Diseño responsivo en el apartado "Web version"</li>
+                        <li class="changes">🔹Eliminación de elementos de relleno en "Proyectos" y en "Exp & Skills" y adición de nuevo contenido</li>
+                        <li class="changes">🔹Correcciones ortográficas"</li>
+                        <li class="changes">🔹Utilización de local Storage y de session Storage dentro de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changesSoon">🔶Próximos cambios...🔜</li>
+                        <li class="changesSoon">🔸Sorpresa</li>
+                    </ul>
+                </div>
+                <div class="cardChanges">
+                    <ul>
+                        <li>Web version V .1️⃣0️⃣ | 30/11/2022</li>
+                        <br>
+                        <li>🔷Changes log 👇🏼</li>
+                        <li class="changes">🔹Display de error en un dato del formulario <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Corrección de error en el id de correo que provocaba un valor null</li>
+                        <li class="changesSoon">🔶Próximos cambios...🔜</li>
+                        <li class="changesSoon">🔸APIs</li>
+                    </ul>
+                </div>
+            </div>
         </footer>  
         <script src="./js/main.js"></script>     
     </body>
