--- a/proyects/Masterdots/masterdots_index.html
+++ b/proyects/Masterdots/masterdots_index.html
@@ -29,11 +29,11 @@
                 <input type="text" name="nick" id="nick" required minlength="2">
             </div>
             <div class="itemform">
-                <label for="email">Correo electronico</label>
+                <label for="email">Correo electrónico</label>
                 <input type="email" name="email" id="email" value="yo@email.com" required>
             </div>
             <div class="itemform">
-                <label for="size">Tamano del juego*</label>
+                <label for="size">Tamaño del juego*</label>
                 <select name="size" id="size">
                     <option value="0">--Elije un tamaño--</option>
                     <option value="1">4x4</option>
@@ -51,9 +51,10 @@
     </main>
     <!-- PIE DE PAGINA -->
     <footer>
-        <p>Curso FronEnd HTML, CSS Y JS</p>
+        <p>Curso FrontEnd HTML, CSS Y JS</p>
     </footer>
     <!-- SCRIPTS -->
+    <script src="./js/userData.js"></script>
     <script src="./js/app.js" defer></script>
 </body>
 </html>
