v.12 🔹Geolocalización dentro del proyecto de Masterdots🔵 🔹Optimización de código haciendo un DOM loaded al iniciar la el index de Masterdots🔵 🔹Creación e implementación de un Drag and drop dentro de Masterdots🔵 🔹Implementación de un canvas API dentro de Masterdots🔵 🔹Juego de Masterdots🔵 (No esta terminado y hay bugs)

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                         <h3>Masterdots🔵</h3>
                         <h4>FrontEnd</h4>
                         <div class="sep"></div>
-                        <p>Estaremos viendo con el profe paco el frontend</p>
-                        <p class="time">Última actualización 01/12/2022</p>
+                        <p>Proyecto de FrontEnd</p>
+                        <p class="time">Última actualización 04/12/2022</p>
                         <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/Masterdots/masterdots_index.html';">👉🏻</button></div>
                     </div>
                 </div>
@@ -161,9 +161,26 @@
             <div id="logChanges">
                 <div class="cardChanges">
                     <ul>
+                        <li>Web version V .1️⃣2️⃣ | 04/12/2022</li>
+                        <br>
+                        <li>🔷Changes log 👇🏼</li>
+                        <li>-----------------------------------------------</li>
+                        <li class="changes">🔹Geolocalización dentro del proyecto de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Optimización de código haciendo un DOM loaded al iniciar la el index de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Creación e implementación de un Drag and drop dentro de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Implementación de un canvas API dentro de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Juego de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a> (No esta terminado y hay bugs)</li>
+                        <li>-----------------------------------------------</li>
+                        <li class="changesSoon">🔶Próximos cambios...🔜</li>
+                        <li class="changesSoon">🔸Sorpresa</li>
+                    </ul>
+                </div>
+                <div class="cardChanges">
+                    <ul>
                         <li>Web version V .1️⃣1️⃣ | 01/12/2022</li>
                         <br>
                         <li>🔷Changes log 👇🏼</li>
+                        <li>-----------------------------------------------</li>
                         <li class="changes">🔹Implementación de el histórico de registro de cambios</li>
                         <li class="changes">🔹Reparación de links caídos o referencias inexistentes</li>
                         <li class="changes">🔹Mejora del diseño en elementos de el apartado "Web version"</li>
@@ -172,6 +189,7 @@
                         <li class="changes">🔹Eliminación de elementos de relleno en "Proyectos" y en "Exp & Skills" y adición de nuevo contenido</li>
                         <li class="changes">🔹Correcciones ortográficas"</li>
                         <li class="changes">🔹Utilización de local Storage y de session Storage dentro de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li>-----------------------------------------------</li>
                         <li class="changesSoon">🔶Próximos cambios...🔜</li>
                         <li class="changesSoon">🔸Sorpresa</li>
                     </ul>
@@ -181,8 +199,10 @@
                         <li>Web version V .1️⃣0️⃣ | 30/11/2022</li>
                         <br>
                         <li>🔷Changes log 👇🏼</li>
+                        <li>-----------------------------------------------</li>
                         <li class="changes">🔹Display de error en un dato del formulario <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
                         <li class="changes">🔹Corrección de error en el id de correo que provocaba un valor null</li>
+                        <li>-----------------------------------------------</li>
                         <li class="changesSoon">🔶Próximos cambios...🔜</li>
                         <li class="changesSoon">🔸APIs</li>
                     </ul>
