--- a/proyects/Masterdots/juego.html
+++ b/proyects/Masterdots/juego.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/estilojuego.css">
+    <title>MasterDots enter</title>
 </head>
 <body>
-    <H1>JUEGO MASTERDOTS</H1>
+    <main>
+        <div id="contenedorJuego">
+            <div id="juego">
+                <!-- Pintar el panel de juego automáticamente  -->
+                <!--<div class="containerItem"><div class="item"></div></div> -->
+            </div>
+            <div id="tituloJuego">
+                <p>MASTERDOTS</p>
+            </div>
+        </div>
+        <div id="contenedorUsuario">
+            <form id="form_entrada" action="juego.html">
+                <div class="itemform">
+                    <img src="./img/avatar1.png" width="26" id="avatarImg">
+                    <input type="text" id="nick" value="nick" readonly>
+                </div>
+                <div class="itemform">
+                    <label for="puntuacion">puntuación</label>
+                    <input type="text" id="puntuacion" value="0"  class="inputJuego" readonly>
+                </div>
+                <div class="itemform">
+                    <label for="tmpo">tiempo restante</label>
+                    <input type="text" id="tmpo" value="30" class="inputJuego" readonly>
+                </div>
+            </form>
+        </div>
+    </main>
+    <footer>
+        Curso Frontend JS, HTML y CSS
+    </footer>
     <script src="./js/userData.js"></script>
     <script src="./js/juego.js"></script>
 </body>
