v.13 🔹Funciones de juego implementadas en Masterdots🔵 (tiempo y jugar otra vez ) 🔹Animaciones y transiciones de en el juego de Masterdots🔵 🔹Se identifico el bug que causa que al pasar con el mouse sobre un dot este cambia de color pero si se pasa de nuevo son soltar el click este genera un error Masterdots🔵 (Solo se identifico aun no se ha trabajado) 🔹Error visual de tamaño al seleccionar otro tamaño que no es 4x4 en el juego de Masterdots🔵 🔹Creación de un nuevo proyecto llamado "JavaScrip básico"

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div id="proyect_container" class="proyect_container">
                     <div class="proyect">
-                        <img src="./img/giphy (1).gif" alt="">
+                        <img src="./img/giphy (1).gif">
                         <h3>Proyecto <strong>N</strong></h3>
                         <h4>Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</h4>
                         <div class="sep"></div>
@@ -86,13 +86,22 @@
                         <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n/proyect_n.html';">👉🏻</button></div>
                     </div>
                     <div class="proyect">
-                        <img src="./img/711093.jpg" alt="Portfolio 3">
+                        <img src="./img/masterdots.png">
                         <h3>Masterdots🔵</h3>
                         <h4>FrontEnd</h4>
                         <div class="sep"></div>
-                        <p>Proyecto de FrontEnd</p>
-                        <p class="time">Última actualización 04/12/2022</p>
+                        <p>Juego programado con JavaScrip donde se realiza validaciones de usuario y datos del sessionStorage y del localStorage para determinar el tipo de juego</p>
+                        <p class="time">Última actualización 10/12/2022</p>
                         <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/Masterdots/masterdots_index.html';">👉🏻</button></div>
+                    </div>
+                    <div class="proyect">
+                        <img src="./img/548694.jpg">
+                        <h3>JavaScrip básico</h3>
+                        <h4>Básico de Javascript</h4>
+                        <div class="sep"></div>
+                        <p>Lógica de JavaScrip</p>
+                        <p class="time">Última actualización 10/12/2022</p>
+                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/vue frontend/vue_index.html';">👉🏻</button></div>
                     </div>
                 </div>
             </section>
@@ -159,6 +168,20 @@
         <!-- Footer -->
         <footer>
             <div id="logChanges">
+                <div id="currentCardChanges">
+                    <ul>
+                        <li>Web version V .1️⃣3️⃣ | 10/12/2022</li>
+                        <br>
+                        <li>🔷Changes log 👇🏼</li>
+                        <li>-----------------------------------------------</li>
+                        <li class="changes">🔹Funciones de juego implementadas en <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a> (tiempo y jugar otra vez )</li>
+                        <li class="changes">🔹Animaciones y transiciones de en el juego de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Se identifico el bug que causa que al pasar con el mouse sobre un dot este cambia de color pero si se pasa de nuevo son soltar el click este genera un error <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a>  <br>(Solo se identifico aun no se ha trabajado)</li>
+                        <li class="changes">🔹Error visual de tamaño al seleccionar otro tamaño que no es 4x4 en el juego de <a href="./proyects/Masterdots/masterdots_index.html">Masterdots🔵</a></li>
+                        <li class="changes">🔹Creación de un nuevo proyecto llamado "JavaScrip básico"</li>
+                        <li>-----------------------------------------------</li>
+                    </ul>
+                </div>
                 <div class="cardChanges">
                     <ul>
                         <li>Web version V .1️⃣2️⃣ | 04/12/2022</li>
