--- a/proyects/Masterdots/juego.html
+++ b/proyects/Masterdots/juego.html
@@ -18,6 +18,9 @@
                 <!-- Pintar el panel de juego automáticamente  -->
                 <!--<div class="containerItem"><div class="item"></div></div> -->
             </div>
+            <div id="juegoAcabado">
+                <button id="nuevaPartida">OTRA PARTIDA</button>
+            </div>
             <div id="tituloJuego">
                 <p>MASTERDOTS</p>
             </div>
@@ -34,7 +37,7 @@
                 </div>
                 <div class="itemform">
                     <label for="tmpo">tiempo restante</label>
-                    <input type="text" id="tmpo" value="30" class="inputJuego" readonly>
+                    <input type="text" id="tmpo" value="100" class="inputJuego" readonly>
                 </div>
             </form>
         </div>
