--- a/proyects/proyect_n/proyect_n.html
+++ b/proyects/proyect_n/proyect_n.html
@@ -5,30 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Likeos -->
-    <link rel="stylesheet" href="../../css/estilos.css">
+    <link rel="stylesheet" href="estilos_proyecton.css">
     <title>Proyect N</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="../index.html#aboutme">Sobre mi</a></li>
-            <li><a href="../index.html#cualidades">Proyectos</a></li>
-            <li id="logo"><a href="../index.html">👾</a></li>
-            <li><a href="../index.html#experiencia">Skils</a></li>
-            <li><a href="../index.html#contactar">Contactar</a></li>
-        </ul>
-    </nav>
-    <article>
-        <section>
-            <p>Por favor llena este formulario para ponerte en contacto con nostros</p>
-            
-        </section>
-        <button onclick="addElement()">ADD</button>
-        <button onclick="removeElement()">DELETE</button>
-        <div id="container">
-            
-        </div>
-    </article>
-    <script src="./test.js"></script>
+    <div id="over">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat voluptatum excepturi quisquam provident, asperiores corporis at nemo, culpa tenetur iure quia facilis, dolores nulla quae beatae necessitatibus modi minus itaque!
+    </div>
 </body>
 </html>
