Integración de mi Todo list

--- a/proyects/proyect_n/proyect_n.html
+++ b/proyects/proyect_n/proyect_n.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Esta es una página de ejemplo">
+    <meta name="keywords" content="HTML, CSS, Ejemplo">
+    <meta name="author" content="Tu nombre">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Likeos -->
     <link rel="stylesheet" href="estilos_proyecton.css">
-    <title>Proyect N</title>
+    <title>Todo List</title>
 </head>
 <body>
-    <div class="dropdown">
-            <button class="dropdown-btn">dropdown</button>
-        <div class="dropdown-content">
-            <a href="#">Link 1</a>
-            <a href="#">Link 2</a>
-            <a href="#">Link 3</a>
-        </div>
+    <div class="container">
+        <form id="todo-form">
+            <input type="text" id="todo">
+            <input type="submit" value="Enviar">
+        </form> 
+        <ul id="todo-list"></ul>
     </div>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod velit blanditiis esse accusantium est nesciunt, recusandae a voluptas hic ipsum voluptatum in distinctio tenetur at nam! Inventore doloremque eligendi similique!</p>
+    <script src="/Seikened.github.io/proyects/proyect_n/index.js"></script>
 </body>
 </html>
