fix rout of proyect n and his rout of index.js

--- a/proyects/proyect_n/proyect_n.html
+++ b/proyects/proyect_n/proyect_n.html
@@ -17,6 +17,6 @@
         </form> 
         <ul id="todo-list"></ul>
     </div>
-    <script src="/Seikened.github.io/proyects/proyect_n/index.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
