--- a/proyects/proyect_n/sub_n/todo_list.html
+++ b/proyects/proyect_n/sub_n/todo_list.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS, Ejemplo">
     <meta name="author" content="Tu nombre">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos_proyecton.css">
+    <link rel="stylesheet" href="todo_list.css">
     <title>Todo List</title>
 </head>
 <body>
