--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
                 <div id="proyect_container" class="proyect_container">
                     <div class="proyect">
                         <img src="./img/giphy (1).gif">
+                        <h3>Pyton</h3>
+                        <h4>Aprendiendo las bases de Pyton</h4>
+                        <div class="sep"></div>
+                        <p>Este proyecto me dará la oportunidad de crear muchas de las funciones de backend que ocupo y requiero.</p>
+                        <p class="time">Última actualización 17/08/2023</p>
+                        <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n/index.html';">👉🏻</button></div>
+                    </div>
+                    <div class="proyect">
+                        <img src="./img/giphy (1).gif">
                         <h3>Proyecto <strong>N</strong></h3>
                         <h4>Aprende Javascript ES9, HTML, CSS3 y NodeJS desde cero</h4>
                         <div class="sep"></div>
