--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <h3>Pyton</h3>
                         <h4>Aprendiendo las bases de Pyton</h4>
                         <div class="sep"></div>
-                        <p>Este proyecto me dará la oportunidad de crear muchas de las funciones de backend que ocupo y requiero.</p>
+                        <p>Este proyecto plantea las bases de pyton</p>
                         <p class="time">Última actualización 17/08/2023</p>
                         <div class="masinfo"><button type="button" onclick="window.location.href='./proyects/proyect_n/index.html';">👉🏻</button></div>
                     </div>
